bad/return_int_in_func_returning_array.example_compiler_output
ERROR
[1mbad/return_int_in_func_returning_array.lat:2:23: [1;31merror: [0;1mreturned value of type `int` is not convertible to return type `int[]`[m
int[] test() { return 42; }
                      [1;32m^[m
